apps/base/wyoming-voice/piper-ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: wyoming-piper
  labels:
    app: wyoming-piper
spec:
  entryPoints:
    - wyoming-piper
  routes:
    - match: HostSNI(`*`)
      services:
        - name: wyoming-piper
          port: wyoming
